tests/invalid/Mercury.options.invalid
# Test that we give a proper error message for words in MLLIBS that
# aren't `-l' options.
MLLIBS = invalid sdfksjdkljs 
